first-service/deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: first-service
spec:
 ports:
 - port: 8080
   targetPort: 8080
   name: http
 selector:
  app: first-service
 type: NodePort
